--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,29 +48,66 @@ nav a{
     color: #474747;
 }
 /* header releted styles */
-.header{
+.header {
     background-color: #FFF8F3;
+    background-image: url('../image/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
 }
-.banner .profile-pic{
+.banner-content {
+    max-width: 500px;
+}
+.banner .profile-pic {
     width: 500px;
 }
 
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.benner-title {
+    font-size: 85px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* main section styles */
 
 
 
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
 
+.section-title {
+    color:  #181818;
+    text-align: center;
+    
+    font-size: 35px;
+    
+    font-weight: 700;
+   
+}
 
+.section-description {
+    color:  #757575;
+text-align: center;
 
+font-size: 18px;
 
-
-
-
-
-
+font-weight: 400;
+line-height: 30px; 
+}
 
 
